--- a/Assignments/Assignment_1/Predicting-Survival-Titanic-Assignement.ipynb
+++ b/Assignments/Assignment_1/Predicting-Survival-Titanic-Assignement.ipynb
@@ -18,9 +18,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sklearn'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-94d9734e99a9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;31m# to divide train and test set\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodel_selection\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;31m# feature scaling\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "\n",
@@ -59,164 +71,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>pclass</th>\n",
-       "      <th>survived</th>\n",
-       "      <th>name</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>age</th>\n",
-       "      <th>sibsp</th>\n",
-       "      <th>parch</th>\n",
-       "      <th>ticket</th>\n",
-       "      <th>fare</th>\n",
-       "      <th>cabin</th>\n",
-       "      <th>embarked</th>\n",
-       "      <th>boat</th>\n",
-       "      <th>body</th>\n",
-       "      <th>home.dest</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Allen, Miss. Elisabeth Walton</td>\n",
-       "      <td>female</td>\n",
-       "      <td>29</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>24160</td>\n",
-       "      <td>211.3375</td>\n",
-       "      <td>B5</td>\n",
-       "      <td>S</td>\n",
-       "      <td>2</td>\n",
-       "      <td>?</td>\n",
-       "      <td>St Louis, MO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Allison, Master. Hudson Trevor</td>\n",
-       "      <td>male</td>\n",
-       "      <td>0.9167</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>113781</td>\n",
-       "      <td>151.55</td>\n",
-       "      <td>C22 C26</td>\n",
-       "      <td>S</td>\n",
-       "      <td>11</td>\n",
-       "      <td>?</td>\n",
-       "      <td>Montreal, PQ / Chesterville, ON</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Allison, Miss. Helen Loraine</td>\n",
-       "      <td>female</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>113781</td>\n",
-       "      <td>151.55</td>\n",
-       "      <td>C22 C26</td>\n",
-       "      <td>S</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>Montreal, PQ / Chesterville, ON</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Allison, Mr. Hudson Joshua Creighton</td>\n",
-       "      <td>male</td>\n",
-       "      <td>30</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>113781</td>\n",
-       "      <td>151.55</td>\n",
-       "      <td>C22 C26</td>\n",
-       "      <td>S</td>\n",
-       "      <td>?</td>\n",
-       "      <td>135</td>\n",
-       "      <td>Montreal, PQ / Chesterville, ON</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Allison, Mrs. Hudson J C (Bessie Waldo Daniels)</td>\n",
-       "      <td>female</td>\n",
-       "      <td>25</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>113781</td>\n",
-       "      <td>151.55</td>\n",
-       "      <td>C22 C26</td>\n",
-       "      <td>S</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>Montreal, PQ / Chesterville, ON</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   pclass  survived                                             name     sex  \\\n",
-       "0       1         1                    Allen, Miss. Elisabeth Walton  female   \n",
-       "1       1         1                   Allison, Master. Hudson Trevor    male   \n",
-       "2       1         0                     Allison, Miss. Helen Loraine  female   \n",
-       "3       1         0             Allison, Mr. Hudson Joshua Creighton    male   \n",
-       "4       1         0  Allison, Mrs. Hudson J C (Bessie Waldo Daniels)  female   \n",
-       "\n",
-       "      age  sibsp  parch  ticket      fare    cabin embarked boat body  \\\n",
-       "0      29      0      0   24160  211.3375       B5        S    2    ?   \n",
-       "1  0.9167      1      2  113781    151.55  C22 C26        S   11    ?   \n",
-       "2       2      1      2  113781    151.55  C22 C26        S    ?    ?   \n",
-       "3      30      1      2  113781    151.55  C22 C26        S    ?  135   \n",
-       "4      25      1      2  113781    151.55  C22 C26        S    ?    ?   \n",
-       "\n",
-       "                         home.dest  \n",
-       "0                     St Louis, MO  \n",
-       "1  Montreal, PQ / Chesterville, ON  \n",
-       "2  Montreal, PQ / Chesterville, ON  \n",
-       "3  Montreal, PQ / Chesterville, ON  \n",
-       "4  Montreal, PQ / Chesterville, ON  "
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# load the data - it is available open source and online\n",
     "\n",
@@ -752,9 +609,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "feml",
-   "language": "python",
-   "name": "feml"
+   "name": "python3",
+   "display_name": "Python 3.8.5 64-bit ('symphony': conda)",
+   "metadata": {
+    "interpreter": {
+     "hash": "a301c7635211ddf86cdbfeb8b274ed86396d228f84008e4326c03a859c8193ab"
+    }
+   }
   },
   "language_info": {
    "codemirror_mode": {
@@ -766,7 +627,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5-final"
   },
   "toc": {
    "nav_menu": {},
