--- a/Assignments/Assignment_1/Predicting-Survival-Titanic-Assignement.ipynb
+++ b/Assignments/Assignment_1/Predicting-Survival-Titanic-Assignement.ipynb
@@ -548,17 +548,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def frequentLabels(df,percent,var):\n",
+    "    temp = df.groupby(var).count()/len(df)\n",
+    "    return temp[temp>percent].index"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for cat in vars_cat:\n",
+    "    labels = frequentLabels(X_train,0.05,cat)\n",
+    "    X_train[cat] = np.where(X_train[cat].isin(labels),X_train[cat],'Rare')\n",
+    "    X_test[cat] = np.where(X_test[cat].isin(labels),X_test[cat],'Rare')"
+   ]
   },
   {
    "cell_type": "code",
