--- a/Assignments/Assignment_1/Predicting-Survival-Titanic-Assignement.ipynb
+++ b/Assignments/Assignment_1/Predicting-Survival-Titanic-Assignement.ipynb
@@ -812,29 +812,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
     "classes = model.predict(X_test)\n",
-    "acc = accuracy_score(y_test.astype('int'),classes)"
+    "acc = accuracy_score(y_test.astype('int'),classes)\n",
+    "roc = roc_auc_score(y_test.astype('int'),model.predict_proba(X_test)[:,1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "0.6641221374045801\n"
+      "0.6641221374045801 0.7021296296296295\n"
      ]
     }
    ],
    "source": [
-    "print(acc)"
+    "print(acc,roc)"
    ]
   },
   {
