--- a/Assignments/Assignment_2/Predicting-Survival-Titanic-Notebook.ipynb
+++ b/Assignments/Assignment_2/Predicting-Survival-Titanic-Notebook.ipynb
@@ -22,7 +22,19 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sklearn'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-452a0071e6d3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m# to divide train and test set\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodel_selection\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;31m# feature scaling\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
+     ]
+    }
+   ],
    "source": [
     "# to handle datasets\n",
     "import pandas as pd\n",
@@ -53,133 +65,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>pclass</th>\n",
-       "      <th>survived</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>age</th>\n",
-       "      <th>sibsp</th>\n",
-       "      <th>parch</th>\n",
-       "      <th>fare</th>\n",
-       "      <th>cabin</th>\n",
-       "      <th>embarked</th>\n",
-       "      <th>title</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>female</td>\n",
-       "      <td>29.0000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>211.3375</td>\n",
-       "      <td>B5</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Miss</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>male</td>\n",
-       "      <td>0.9167</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>151.5500</td>\n",
-       "      <td>C22</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Master</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>female</td>\n",
-       "      <td>2.0000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>151.5500</td>\n",
-       "      <td>C22</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Miss</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>male</td>\n",
-       "      <td>30.0000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>151.5500</td>\n",
-       "      <td>C22</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Mr</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>female</td>\n",
-       "      <td>25.0000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>151.5500</td>\n",
-       "      <td>C22</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Mrs</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   pclass  survived     sex      age  sibsp  parch      fare cabin embarked  \\\n",
-       "0       1         1  female  29.0000      0      0  211.3375    B5        S   \n",
-       "1       1         1    male   0.9167      1      2  151.5500   C22        S   \n",
-       "2       1         0  female   2.0000      1      2  151.5500   C22        S   \n",
-       "3       1         0    male  30.0000      1      2  151.5500   C22        S   \n",
-       "4       1         0  female  25.0000      1      2  151.5500   C22        S   \n",
-       "\n",
-       "    title  \n",
-       "0    Miss  \n",
-       "1  Master  \n",
-       "2    Miss  \n",
-       "3      Mr  \n",
-       "4     Mrs  "
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# load the data - it is available open source and online\n",
     "\n",
@@ -200,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,11 +101,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Number of numerical variables: 5\n",
-      "Number of categorical variables: 4\n"
+      "Number of numerical variables: 5\nNumber of categorical variables: 4\n"
      ]
     }
    ],
@@ -232,22 +119,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "['sex', 'cabin', 'embarked', 'title']"
+       "['pclass', 'age', 'sibsp', 'parch', 'fare']"
       ]
      },
-     "execution_count": 16,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 5
     }
    ],
    "source": [
-    "vars_cat"
+    "vars_num"
    ]
   },
   {
@@ -797,9 +684,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "feml",
-   "language": "python",
-   "name": "feml"
+   "name": "python3",
+   "display_name": "Python 3.8.5 64-bit ('symphony': conda)",
+   "metadata": {
+    "interpreter": {
+     "hash": "a301c7635211ddf86cdbfeb8b274ed86396d228f84008e4326c03a859c8193ab"
+    }
+   }
   },
   "language_info": {
    "codemirror_mode": {
@@ -811,7 +702,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5-final"
   },
   "toc": {
    "nav_menu": {},
