--- a/Assignments/Assignment_3/Predicting-Survival-Titanic-Notebook.ipynb
+++ b/Assignments/Assignment_3/Predicting-Survival-Titanic-Notebook.ipynb
@@ -57,108 +57,8 @@
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>pclass</th>\n",
-       "      <th>survived</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>age</th>\n",
-       "      <th>sibsp</th>\n",
-       "      <th>parch</th>\n",
-       "      <th>fare</th>\n",
-       "      <th>cabin</th>\n",
-       "      <th>embarked</th>\n",
-       "      <th>title</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>female</td>\n",
-       "      <td>29.0000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>211.3375</td>\n",
-       "      <td>B5</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Miss</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>male</td>\n",
-       "      <td>0.9167</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>151.5500</td>\n",
-       "      <td>C22</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Master</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>female</td>\n",
-       "      <td>2.0000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>151.5500</td>\n",
-       "      <td>C22</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Miss</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>male</td>\n",
-       "      <td>30.0000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>151.5500</td>\n",
-       "      <td>C22</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Mr</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>female</td>\n",
-       "      <td>25.0000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>151.5500</td>\n",
-       "      <td>C22</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Mrs</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
        "   pclass  survived     sex      age  sibsp  parch      fare cabin embarked  \\\n",
        "0       1         1  female  29.0000      0      0  211.3375    B5        S   \n",
@@ -173,11 +73,11 @@
        "2    Miss  \n",
        "3      Mr  \n",
        "4     Mrs  "
-      ]
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>pclass</th>\n      <th>survived</th>\n      <th>sex</th>\n      <th>age</th>\n      <th>sibsp</th>\n      <th>parch</th>\n      <th>fare</th>\n      <th>cabin</th>\n      <th>embarked</th>\n      <th>title</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>1</td>\n      <td>female</td>\n      <td>29.0000</td>\n      <td>0</td>\n      <td>0</td>\n      <td>211.3375</td>\n      <td>B5</td>\n      <td>S</td>\n      <td>Miss</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>1</td>\n      <td>male</td>\n      <td>0.9167</td>\n      <td>1</td>\n      <td>2</td>\n      <td>151.5500</td>\n      <td>C22</td>\n      <td>S</td>\n      <td>Master</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1</td>\n      <td>0</td>\n      <td>female</td>\n      <td>2.0000</td>\n      <td>1</td>\n      <td>2</td>\n      <td>151.5500</td>\n      <td>C22</td>\n      <td>S</td>\n      <td>Miss</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1</td>\n      <td>0</td>\n      <td>male</td>\n      <td>30.0000</td>\n      <td>1</td>\n      <td>2</td>\n      <td>151.5500</td>\n      <td>C22</td>\n      <td>S</td>\n      <td>Mr</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1</td>\n      <td>0</td>\n      <td>female</td>\n      <td>25.0000</td>\n      <td>1</td>\n      <td>2</td>\n      <td>151.5500</td>\n      <td>C22</td>\n      <td>S</td>\n      <td>Mrs</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 2,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 2
     }
    ],
    "source": [
@@ -213,11 +113,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Number of numerical variables: 5\n",
-      "Number of categorical variables: 4\n"
+      "Number of numerical variables: 5\nNumber of categorical variables: 4\n"
      ]
     }
    ],
@@ -232,22 +131,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "['sex', 'cabin', 'embarked', 'title']"
+       "['pclass', 'age', 'sibsp', 'parch', 'fare']"
       ]
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 6
     }
    ],
    "source": [
-    "vars_cat"
+    "vars_num"
    ]
   },
   {
@@ -797,9 +696,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "feml",
-   "language": "python",
-   "name": "feml"
+   "name": "python3",
+   "display_name": "Python 3.8.5 64-bit ('mlops': conda)",
+   "metadata": {
+    "interpreter": {
+     "hash": "17a72e36a438a71ffc56163934110da7392f08a4bdbb1baa283e376eb1ee47cc"
+    }
+   }
   },
   "language_info": {
    "codemirror_mode": {
@@ -811,7 +714,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
